--- a/src/index.ejs
+++ b/src/index.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Report</title>
 
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <style>
         table {
             width: 100%;
@@ -18,9 +19,9 @@
     </style>
 </head>
 
-<body>
-    <div>
-        <h1>Developer listing</h1>
+<body class="bg-gray-100">
+    <div class="m-8">
+        <h1 class="text-3xl">Developer listing</h1>
         <table>
             <thead>
                 <tr>
